# python-vistopia

./: .flake8  .gitignore  LICENSE  README.md  dev-requirements.txt  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml
tests/: test_cli.py  test_live_endpoints.py  test_models.py  test_visitor.py
tests/2/: test_id3_tagging_with_missing_id3.py
tests/4/: test_id3_tagging_with_missing_id3.py
vistopia/: __init__.py  main.py  models.py  utils.py  visitor.py
vistopian/: main.py  visitor.py
