[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vistopia"
authors = [
    { name = "Chenxing Luo", email = "chenxing.luo@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    "click",
    "mutagen",
    "pydantic>=2,<3; python_version >= '3.8'",
    "pydantic>=1.8.2,<1.9; python_version < '3.8'",
    "pathvalidate",
    "requests",
    "tabulate",
    "wcwidth",
]
requires-python = ">=3.6.1"

[project.optional-dependencies]
dev = [
    "autopep8",
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest_click",
    "types-requests",
    "types-tabulate",
]

[project.scripts]
vistopian = "vistopia:main.main"

[project.urls]
Repository = "https://github.com/chazeon/python-vistopia.git"

[tool.setuptools.packages.find]
include = ["vistopia"]

[tool.setuptools.dynamic]
version = { attr = "vistopia.__version__" }

[tool.pytest.ini_options]
addopts = "--cov vistopia --doctest-modules --cov-report=xml --cov-report=term"

[tool.mypy]
files = ["vistopia", "tests"]
check_untyped_defs = true
show_error_codes = true

[tool.coverage.run]
source = ["vistopia"]
relative_files = true

[tool.coverage.xml]
output = "coverage.xml"
